Fix todo link field not appearing: wrap in grid-spanning div

--- a/style.css
+++ b/style.css
@@ -682,9 +682,20 @@ h1 {
 }
 
 .shop-link-input,
-.todo-link-input,
 .edit-link-input {
     grid-column: 1 / -1;
+}
+
+.todo-link-section {
+    grid-column: 1 / -1;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.todo-link-section .add-input {
+    width: 100%;
+    min-width: 0;
 }
 
 .col-item a,
